3.6.4 - ???

* 11059: Right Click menu added to Show Error Log window in Module Manager
* 11056: Don't attempt to send to already-hung-up connection
* 11053: Suppress Empty Deck Hotkeys when refreshing game
* 11041: Inventory windows respond to hide-if-property-true
* 11039: Display Loaded message instead of Cancelled when refreshing
    Predefined Setups
* 11038: Allow 'Use Same Boards' option on Private Map to be removed
* 11032: List Key Commands tool for Editor
* 11031: Turn Tracker List configure box missing labels
* 11025: Guard against ClassCastException when MultiActionButtons change
    property values
* 11024: Communicating with tiler over socket fails for some users; use stdout
    instead
* 11020: Don't display lock option for P2P rooms, which aren't lockable
* 11011: Fixed typo in DiceButton docs

3.6.3 - 29 December 2021

* 11008: Prevent URLConnection cache from holding edited modules open on
    Windows
* 11007: Fix ArrayIndexOutOfBoundsException in StringEnumConfigurer
* 11003: Fixed bad tile message; added plea for help with
    TileNotFoundExceptions
* 10997: Editor: Don't close window when moving Map or other components
    relative to Map
* 10992: Fix NPE in SpecialDiceButton.getAttributeValueString() after deleting
    tooltip
* 10985: Reset save dialog filename after close of game
* 10983: Fix bad Inventory.Counter.equals()
* 10981: Reinstate AbstractBuildable.getComponents()
* 10979: Prevent Save Game from clobbering log being replayed
* 10970: Fix problem where rotated pieces did not move-fixed-distance in
    correct direction
* 10969: Fix Refresh of Pieces in Decks, remove old pieces completely
* 10964: Fix Deal-to-Side Mask bug - Finish evaluating expression properly
* 10961: Use heuristic value for initial tiler heap; use 3/4 physical RAM as
    max heap
* 10954: Fix stack overflow infinite loop if invalid property name put in blank
* 10947: Collect diagnostic information for an SSLHandshakeException
* 10942: Fix NPE in SendToLocation