@@ -23,6 +23,8 @@
         { "num": 11032, "desc": "List Key Commands tool for Editor" }
       ],
       "bug_fixes": [
+        { "num": 11062, "desc": "Fix problem on Windows where a click at edge made it slowly scroll all the way in that direction" },
+        { "num": 11060, "desc": "Fixes to various Toolbar Buttons that weren't respecting the \"disable-on-global-property\" settings" },
         { "num": 11056, "desc": "Don't attempt to send to already-hung-up connection" },
         { "num": 11053, "desc": "Suppress Empty Deck Hotkeys when refreshing game" },
         { "num": 11041, "desc": "Inventory windows respond to hide-if-property-true" },
@@ -35,7 +37,8 @@
         { "num": 11011, "desc": "Fixed typo in DiceButton docs" }
       ],
       "other_improvements": [
-        { "num": 11059, "desc": "Right Click menu added to Show Error Log window in Module Manager" }
+        { "num": 11059, "desc": "Right Click menu added to Show Error Log window in Module Manager" },
+        { "num": 11054, "desc": "Don't let old versions of PoG load and crash" }
       ]
     },
     {
